<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:background="@drawable/bg_blue_gradient"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ProgressBar
        android:layout_gravity="center"
        android:id="@+id/progress"
        android:visibility="gone"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginBottom="75dp"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/progress_gradient"/>
    <hazem.nurmontage.videoquran.views.TextCustumFont
        android:textSize="12sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_gravity="center"
        android:id="@+id/tv_progress"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="2 %"/>
    <hazem.nurmontage.videoquran.views.SquareOutlineProgressBar
        android:layout_gravity="center"
        android:id="@+id/progress_horizontal"
        android:layout_width="match_parent"
        android:layout_height="350dp"/>
    <hazem.nurmontage.videoquran.views.TextCustumFont
        android:textSize="12sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_gravity="center"
        android:id="@+id/tv_hint"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"/>
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/layout_error"
        android:background="@color/black"
        android:focusable="true"
        android:visibility="gone"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@drawable/ic_error"
            app:tint="#ffe91e63"/>
        <hazem.nurmontage.videoquran.views.TextCustumFont
            android:textSize="12sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:id="@+id/tv_error"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/tv_error"/>
        <hazem.nurmontage.videoquran.views.ButtonCustumFont
            android:textSize="14sp"
            android:textColor="#ff030904"
            android:id="@+id/btn_support_team"
            android:background="@drawable/btn_green_support"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_margin="30dp"
            android:text="@string/support_team"
            android:textAllCaps="false"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"/>
    </LinearLayout>
    <hazem.nurmontage.videoquran.views.ButtonCustumFont
        android:textColor="@color/white"
        android:layout_gravity="bottom|center"
        android:background="#00ffffff"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:text="@string/cancel"
        android:textAllCaps="false"/>
    <ImageButton
        android:layout_gravity="start"
        android:id="@+id/btn_cancel"
        android:background="#00ffffff"
        android:padding="8dp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="35dp"
        android:src="@drawable/close_24px"
        android:scaleType="centerInside"
        android:layout_marginStart="10dp"
        app:tint="#ffffffff"/>
</FrameLayout>
